fix: Field 하위요소 gap 추가

--- a/react/molecule/field.module.scss
+++ b/react/molecule/field.module.scss
@@ -1,12 +1,22 @@
 @use '../../mixin.scss' as *;
 .style {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: s(3);
-  > div.helper {
-    @include p4;
-    & {
-      color: color('text-sub');
+  &:global {
+    > div.child {
+      width: 100%;
+      > :not(:last-child) {
+        display: inline-block;
+        margin-right: s(5);
+      }
+    }
+    > div.helper {
+      @include p4;
+      & {
+        color: color('text-sub');
+      }
     }
   }
 }
